--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.3.1",
     "@supabase/supabase-js": "^2.53.0",
+    "@types/file-saver": "^2.0.7",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.12",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
+    "jszip": "^3.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
